--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 <body>
 
      <main>
+        <div id="scor-div">
+            <div><img src="./image/logo.png" alt="">
+            <h3><p>SCORe</p>  <p id="span">000</p></h3>
+            <p id="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit <br> rerum rem eius illum at harum blanditiis</p>
+            </div> 
+        </div>
         <div class="contener">
             <div><h1>Challenge yourself</h1></div>
             <div class="carts">
