--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
      <main>
         <div id="scor-div">
             <div><img src="./image/logo.png" alt="">
-            <h3><p>SCORe</p>  <p id="span">000</p></h3>
-            <p id="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit <br> rerum rem eius illum at harum blanditiis</p>
+            <h3><p>SCORe</p>  <p id="span">0</p></h3>
+            <p id="p1">Unlock your mind and master every challenge <br> with passion and precision</p>
             </div> 
         </div>
         <div class="contener">
             <div><h1>Challenge yourself</h1></div>
             <div class="carts">
-                <div onclick="handleClick(this)"  data-img="img-1" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-2" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-1" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-3" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-2" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-4" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-5" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-3" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-9" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-10" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-4" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-8" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-9" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-5" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-10" class="cart"><img src="./image/gojo.jpg" alt=""></div>
-                <div data-img="img-8" class="cart"><img src="./image/gojo.jpg" alt=""></div>
+                <div data-img="img-1" class="cart"><img class="all-img" src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-2" class="cart"><img class="all-img" src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-1" class="cart"><img class="all-img" src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-3" class="cart"><img class="all-img" src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-2" class="cart"><img class="all-img" src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-4" class="cart"><img class="all-img" src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-5" class="cart"><img class="all-img" src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-3" class="cart"><img class="all-img" src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-9" class="cart"><img class="all-img" src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-10" class="cart"><img class="all-img"  src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-4" class="cart"><img class="all-img"  src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-8" class="cart"><img class="all-img"  src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-9" class="cart"><img class="all-img"  src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-5" class="cart"><img class="all-img"  src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-10" class="cart"><img class="all-img"  src="./image/flip.jpg" alt=""></div>
+                <div data-img="img-8" class="cart"><img class="all-img"  src="./image/flip.jpg" alt=""></div>
             </div>
 
             <div class="Rplay">
